SDA-4233 - Fix EXT alignment and closing exiting window issue (#1902)

--- a/src/renderer/styles/call-notification.less
+++ b/src/renderer/styles/call-notification.less
@@ -148,6 +148,7 @@ body {
   height: 19px;
   padding: 0 4px;
   align-items: center;
+  display: flex;
 }
 
 .caller-role {
